--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "Gianpaolo Terranova",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "del": "^3.0.0",
     "fs-extra": "^6.0.1",
     "globby": "^8.0.1",
@@ -32,5 +32,5 @@
     "semver": "^4.3.6",
     "semver-set": "^0.1.1"
   },
-  "dependencies": {}
+  "devDependencies": {}
 }
