Fixed .gitignore(s) (causing exclusion of required files)

--- a/templates/project/config.json
+++ b/templates/project/config.json
@@ -1,5 +1,5 @@
 {
-    "nsAssets": ["assets/nativescriptApp/**/*", "assets/nativescriptApp/**/.*", "!assets/nativescriptApp/package.inc.json"],
+    "nsAssets": ["assets/nativescriptApp/**/*", "assets/nativescriptApp/**/.*", "!assets/nativescriptApp/package.inc.json", "!assets/nativescriptApp/dot.gitignore"],
     "ngAssets": ["assets/angularApp/**/*", "assets/angularApp/**/.*"],
     "commonAssets": ["assets/src/**/*", "assets/src/**/.*", "assets/package.json", "assets/README.md", "assets/references.d.ts", "assets/tsconfig.json" ]
 }
